--- a/RestaurantAppUI/Pages/Info/ProductRequestsInfoPage.xaml
+++ b/RestaurantAppUI/Pages/Info/ProductRequestsInfoPage.xaml
@@ -1,8 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:RestaurantAppUI.Converters"
-             x:Class="RestaurantAppUI.Pages.Info.MenuItemsInfoPage"
-             Title="Меню">
+             x:Class="RestaurantAppUI.Pages.Info.ProductRequestsInfoPage"
+             Title="Product Requests">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
@@ -15,12 +15,12 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Text="Id" FontAttributes="Bold" />
-                    <Label Grid.Column="1" Text="Наименование" FontAttributes="Bold" />
-                    <Label Grid.Column="2" Text="Группа" />
-                    <Label Grid.Column="3" Text="Цена" />
-                    <Label Grid.Column="4" Text="" />
+                    <Label Grid.Column="1" Text="Ресторан" FontAttributes="Bold" />
+                    <Label Grid.Column="2" Text="Дата заявки" FontAttributes="Bold" />
+                    <Label Grid.Column="3" Text="Количество элементов" FontAttributes="Bold" />
+                    <Label Grid.Column="4" Text="" FontAttributes="Bold" />
                 </Grid>
-                <CollectionView x:Name="MenuItemsCollectionView">
+                <CollectionView x:Name="ProductRequestsCollectionView">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <Grid Padding="10">
@@ -32,10 +32,11 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Text="{Binding Id}" />
-                                <Label Grid.Column="1" Text="{Binding Data.Name}" />
+                                <Label Grid.Column="1" Text="{Binding Data.RestaurantId, Converter={converters:RestaurantIdConverter}}" />
                                 <Label Grid.Column="2"
-                                       Text="{Binding Data.Group, Converter={converters:FormatterValueConverter}}" />
-                                <Label Grid.Column="3" Text="{Binding Data.Price}" />
+                                       Text="{Binding Data.RequestDate, Converter={converters:FormatterValueConverter}}" />
+                                <Label Grid.Column="3" Text="{Binding Data.ProductRequestItems.Count}" />
+                                <Button Grid.Column="4" Text="Подробнее" Clicked="OnMoreInfoClicked" />
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
