--- a/RestaurantAppUI/Pages/Info/InfoPage.xaml
+++ b/RestaurantAppUI/Pages/Info/InfoPage.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="RestaurantAppUI.Pages.Info.InfoPage"
-    Title="Данные">
+    Title="Отображение">
 
     <VerticalStackLayout Padding="20" Spacing="15">
 
@@ -34,6 +34,11 @@
         
         <Button Text="Заявки на продукты"
                 Clicked="OnProductRequestsClicked"
+                HorizontalOptions="Fill"
+                VerticalOptions="Center" />
+        
+        <Button Text="Продажи"
+                Clicked="OnSalesClicked"
                 HorizontalOptions="Fill"
                 VerticalOptions="Center" />
 
