--- a/RestaurantAppUI/Presentation/Pages/Info/ProductInfoPage.xaml
+++ b/RestaurantAppUI/Presentation/Pages/Info/ProductInfoPage.xaml
@@ -1,6 +1,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:converters="clr-namespace:RestaurantAppUI.Converters"
+             xmlns:converters1="clr-namespace:RestaurantAppUI.Presentation.Converters"
              x:Class="RestaurantAppUI.Presentation.Pages.Info.ProductsInfoPage"
              Title="Продукты">
     <ContentPage.Content>
@@ -37,11 +37,11 @@
                                 <Label Grid.Column="0" Text="{Binding  Id}" />
                                 <Label Grid.Column="1" Text="{Binding  Data.Name}" />
                                 <Label Grid.Column="2"
-                                       Text="{Binding Data.Unit, Converter={converters:FormatterValueConverter}}" />
+                                       Text="{Binding Data.Unit, Converter={converters1:FormatterValueConverter}}" />
                                 <Label Grid.Column="3" Text="{Binding Data.Quantity}" />
                                 <Label Grid.Column="4" Text="{Binding Data.Price}" />
                                 <Label Grid.Column="5"
-                                       Text="{Binding Data.SupplierId, Converter={converters:SupplierIdConverter}}" />
+                                       Text="{Binding Data.SupplierId, Converter={converters1:SupplierIdConverter}}" />
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
