--- a/RestaurantAppUI/Presentation/Pages/Info/ProductRequestDetailsPage.xaml
+++ b/RestaurantAppUI/Presentation/Pages/Info/ProductRequestDetailsPage.xaml
@@ -1,6 +1,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:converters="clr-namespace:RestaurantAppUI.Converters"
+             xmlns:converters="clr-namespace:RestaurantAppUI.Presentation.Converters"
              x:Class="RestaurantAppUI.Presentation.Pages.Info.ProductRequestDetailsPage"
              Title="Product Request Details">
     <ContentPage.Content>
