--- a/RestaurantAppUI/Presentation/Pages/Info/SalesInfoPage.xaml
+++ b/RestaurantAppUI/Presentation/Pages/Info/SalesInfoPage.xaml
@@ -1,8 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:converters="clr-namespace:RestaurantAppUI.Converters"
+             xmlns:converters1="clr-namespace:RestaurantAppUI.Presentation.Converters"
              x:Class="RestaurantAppUI.Presentation.Pages.Info.SalesInfoPage"
-             Title="Sales">
+             Title="Продажи">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
@@ -32,8 +32,8 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Text="{Binding Id}" />
-                                <Label Grid.Column="1" Text="{Binding Data.RestaurantId, Converter={converters:RestaurantIdConverter}}" />
-                                <Label Grid.Column="2" Text="{Binding Data.Date, Converter={converters:FormatterValueConverter}}" />
+                                <Label Grid.Column="1" Text="{Binding Data.RestaurantId, Converter={converters1:RestaurantIdConverter}}" />
+                                <Label Grid.Column="2" Text="{Binding Data.Date, Converter={converters1:FormatterValueConverter}}" />
                                 <Label Grid.Column="3" Text="{Binding Data.TotalPrice}" />
                                 <Button Grid.Column="4" Text="Подробнее" Clicked="OnMoreInfoClicked" />
                             </Grid>
